# gmc-winter-jam

./: .clang-format  .editorconfig  CMakeLists.txt  vcpkg.json
include/: enemy.hpp  engine.hpp  item.hpp  main.hpp  map.hpp  random.hpp
include/actor/: actor.hpp  ai.hpp  attacker.hpp  container.hpp  destructible.hpp  effect.hpp  pickable.hpp  targetselector.hpp
include/gui/: gui.hpp  menu.hpp  nametracker.hpp
src/: enemy.cpp  engine.cpp  item.cpp  main.cpp  map.cpp  random.cpp
src/actor/: actor.cpp  ai.cpp  attacker.cpp  container.cpp  destructible.cpp  effect.cpp  pickable.cpp  targetselector.cpp
src/gui/: gui.cpp  menu.cpp  nametracker.cpp
